--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name — Portfolio</title>
+  <title>Reetu Parabat— Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,12 +13,12 @@
     <header>
       <img src="https://via.placeholder.com/300x300.png?text=You" alt="Your profile photo" />
       <div>
-        <h1>Your Name</h1>
+        <h1>Reetu Parabat</h1>
         <p>5th Sem CSE student • Interested in Web Dev & Open Source</p>
         <div class="row">
           <a class="btn" href="https://your-website.vercel.app" target="_blank">Website</a>
-          <a class="btn" href="https://github.com/your-username" target="_blank">GitHub</a>
-          <a class="btn" href="https://peerlist.io/your-username" target="_blank">Peerlist</a>
+          <a class="btn" href="https://github.com/Rishi079038" target="_blank">GitHub</a>
+          <a class="btn" href="https://peerlist.io/Reetu" target="_blank">Peerlist</a>
         </div>
       </div>
       <nav>
@@ -33,7 +33,7 @@
     <section id="about">
       <h2>About</h2>
       <p>
-        I’m a Computer Science undergraduate learning full-stack development.  
+        I’m a Computer Science(AIML) undergraduate learning full-stack development.  
         I enjoy building small products, writing clean code, and collaborating on GitHub.
       </p>
     </section>
@@ -50,7 +50,7 @@
           </div>
           <p class="row">
             <a href="https://your-website.vercel.app" class="btn" target="_blank">Live</a>
-            <a href="https://github.com/your-username/portfolio" class="btn" target="_blank">Code</a>
+            <a href="https://github.com/Rishi079038/portfolio" class="btn" target="_blank">Code</a>
           </p>
         </article>
       </div>
